# k8s-docs-rag-engine

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
app/: metrics.py  server.py
bench/: bench_baseline.py  bench_vllm.py  summarize.py
data/bench/: summary.csv
data/eval/: quality_transformers_summary.json  quality_vllm_summary.json  queries.jsonl  retrieval_summary.json
eval/: eval_retrieval.py  generate_answers_transformer.py  generate_answers_vllm.py  judge_answers.py
ingest/html_ingest/: html_utils.py  parse_html.py
ingest/md_ingest/: build_breadcrumbs.py  md_utils.py  parse_md.py
rag/: bge.py  build_index.py  eval.py  local_llm.py  retrieve.py
