[project]
name = "k8s-docs-rag-engine"
version = "0.1.0"
description = "Retrieval-Augmented Generation over Kubernetes documentation with async vLLM-backed serving"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "beautifulsoup4>=4.14.3",
    "datasets>=4.4.2",
    "faiss-cpu>=1.13.1",
    "lxml>=6.0.2",
    "markdown-it-py>=4.0.0",
    "pydantic>=2.12.5",
    "python-frontmatter>=1.1.0",
    "sentence-transformers>=5.2.0",
    "typer>=0.20.0",
    "vllm>=0.15.1",
]
